# HBN_EEG_v1

./: .gitignore  README.md  analyze_predictions.py  check_externalizing_data.py  clean_finetuning_log.py  clean_training_log.py  database_structure.md  diagnose_regression.py  pyproject.toml  requirements.txt  test_val_rt_idx.py
scripts_task_vizualisation/: visualization_utils.py  visualize_contrast_detection.py  visualize_movie_watching.py  visualize_resting_state.py  visualize_sequence_learning.py  visualize_surround_suppression.py  visualize_symbol_search.py
src/: __init__.py  test_pkl_maxime.py
src/ML_pipeline_test/: CRL_mohsenvand.py  README.md  __init__.py  cerebro_loss.py  check_data.sh  classification.py  compare_pretraining_methods.py  compare_pretraining_methods_copy.py  config.py  crl_finetuning_pipeline.sh  crl_pretraining.py  crl_pretraining_data_method_comparison.py  crl_pretraining_pipeline.sh  crl_pretraining_weekend1710.sh  custom_shards_repartition.py  data_loader_ml.py  data_loader_ml_original.py  masking_strategy.py  models.py  multitask_regression_chall2.py  pipeline_pour_debile.sh  pretraining.py  progressive_unfreezing.py  regression.py  regression_save.py  rt_samplepoint_regression.py  run_crl_pipeline.sh  run_pipeline.sh  simple_regression.py  simple_regression_for_chall2.py  test_pattern_truc.py  utils.py
src/ML_pipeline_test/contrastive_learning/: CRL_model.py  CRL_quick_implem.md  NTXent_loss.py  __init__.py  augmentations.py  augmentations_torch copy.py  augmentations_torch.py  config.py  dataset.py  loss.py  models.py  trainer.py  trainer_original.py
src/ML_pipeline_test/datasets_loader_classes/: downstream_dataset.py  shard_crl_dataset.py  shard_crl_dataset_original.py  shard_downstream_dataset.py  shard_multitaskregression_dataset.py  shard_pretraining_dataset.py  ssl_dataset.py
src/ML_pipeline_test/evaluation/: README.md  __init__.py  eval_data_prep.py  evaluation.py  metrics.py
src/ML_pipeline_test/sh_files/: check_data.sh  crl_finetuning_pipeline.sh  crl_pretraining_pipeline.sh  crl_v2_finetuning_pipeline.sh  mae_pretraining.sh  pipeline_pour_debile.sh  run_crl_pipeline.sh  run_pipeline.sh
src/ML_pipeline_test/starterkit/: generate_submission_zip.py  startkit_chall1.py  startkit_chall2.py  startkit_localscoring.py  submission.py  submission_autoencodeur_maskingSSL.py  (+2 more)
src/database_downloader/: __init__.py  download_release2mini.py  downloader.py
src/database_to_dataset/: database_to_challenge1_shards.py  database_to_challenge2_shards_EEGChallengeDataset.py  database_to_crl_pretraining_shards.py  database_to_crl_pretraining_shards_EEGChallengeDataset.py  database_to_dataset.py  database_to_posttraining_shards.py  database_to_pretraining_shards.py  download_database_from_EEGChallengeDataset.py
src/loader/: __init__.py  config.py  simple_loader.py
src/preprocessing/: epoching.py  filters.py  preprocessor.py  test_epoching_real_data.py  test_event_epoching_real_data.py  test_filters_real_data.py  test_normalization_visual.py
test_submission_output/: submission.py
test_submission_output_save/: submission.py
